--- a/demos/logging/package.json
+++ b/demos/logging/package.json
@@ -5,6 +5,7 @@
   "packageManager": "yarn@4.6.0",
   "scripts": {
     "dev": "next dev --turbopack | pino-pretty",
+    "dev:no-pretty": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
